[package]
name = "acoustic_echo_cancellation"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Real-time acoustic echo cancellation in Rust"

[dependencies]
cpal = "0.15"
hound = "3.5.0"
ndarray = "0.16.1"
anyhow = "1.0.97"
clap = { version = "4.4", features = ["derive"] }
realfft = "3.3.0"
rustfft = "6.1.0"
dasp_signal = "0.11.0"
